# Cascaded-Residual-Encoding-for-HDR-Lightmap-Compression

./: CMakeLists.txt  HDRCompress.cpp  HDRCompress2.cpp  HDRDecompress.cpp  HDRDecompress2.cpp  Pic.psd  README.md  _config.yml  numbers.txt
web/: index.html  webp.html
web/engine/: meta.js
web/scene/: index.js  index_webp.js  scene.xml  scene_webp.xml
web/scene/assets/models/textures/: fireplace_face4.hdr
web/scene/assets/textures/: fireplace_face0.hdr  fireplace_face1.hdr  fireplace_face2.hdr  fireplace_face3.hdr  fireplace_face5.hdr
